CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/amt_adjmt__c.field-meta.xml
<CustomField>
    <fullName>amt_adjmt__c</fullName>
    <description>amt_adjmt</description>
    <externalDeveloperName>amt_adjmt</externalDeveloperName>
    <label>Adjustment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>