CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/cde_agnst_adjmt__c.field-meta.xml
<CustomField>
    <fullName>cde_agnst_adjmt__c</fullName>
    <description>cde_agnst_adjmt</description>
    <externalDeveloperName>cde_agnst_adjmt</externalDeveloperName>
    <label>Adjustment Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>