CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/cde_reason_adjmt__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_adjmt__c</fullName>
    <description>cde_reason_adjmt</description>
    <externalDeveloperName>cde_reason_adjmt</externalDeveloperName>
    <label>Adjustment Reason Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>