CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/cde_type_clsfn__c.field-meta.xml
<CustomField>
    <fullName>cde_type_clsfn__c</fullName>
    <description>cde_type_clsfn</description>
    <externalDeveloperName>cde_type_clsfn</externalDeveloperName>
    <label>Classification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>