CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/cde_type_disptn__c.field-meta.xml
<CustomField>
    <fullName>cde_type_disptn__c</fullName>
    <description>cde_type_disptn</description>
    <externalDeveloperName>cde_type_disptn</externalDeveloperName>
    <label>Disposition type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>