CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/cde_type_method__c.field-meta.xml
<CustomField>
    <fullName>cde_type_method__c</fullName>
    <description>cde_type_method</description>
    <externalDeveloperName>cde_type_method</externalDeveloperName>
    <label>Method type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>