CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/dte_crtd_adjmt__c.field-meta.xml
<CustomField>
    <fullName>dte_crtd_adjmt__c</fullName>
    <description>dte_crtd_adjmt</description>
    <externalDeveloperName>dte_crtd_adjmt</externalDeveloperName>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>