CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/dte_discv_adjmt_orig__c.field-meta.xml
<CustomField>
    <fullName>dte_discv_adjmt_orig__c</fullName>
    <description>dte_discv_adjmt_orig</description>
    <externalDeveloperName>dte_discv_adjmt_orig</externalDeveloperName>
    <label>Original Discovery Date</label>
    <type>Date</type>
</CustomField>