CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/dte_end_adjmt__c.field-meta.xml
<CustomField>
    <fullName>dte_end_adjmt__c</fullName>
    <description>dte_end_adjmt</description>
    <externalDeveloperName>dte_end_adjmt</externalDeveloperName>
    <label>Care End Date</label>
    <type>Date</type>
</CustomField>