CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/dte_start_adjmt__c.field-meta.xml
<CustomField>
    <fullName>dte_start_adjmt__c</fullName>
    <description>dte_start_adjmt</description>
    <externalDeveloperName>dte_start_adjmt</externalDeveloperName>
    <label>Care Start Date</label>
    <type>Date</type>
</CustomField>