CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/idn_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_adjmt__c</fullName>
    <description>idn_adjmt</description>
    <externalDeveloperName>idn_adjmt</externalDeveloperName>
    <label>Adjustment</label>
    <length>50</length>
    <referenceTargetField>T_ADJMT__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_ADJMT__c</referenceTo>
    <relationshipLabel>Adjustment Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_adjmt_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>