CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/idn_auth__c.field-meta.xml
<CustomField>
    <fullName>idn_auth__c</fullName>
    <description>idn_auth</description>
    <externalDeveloperName>idn_auth</externalDeveloperName>
    <label>Authorization ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>