CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/ind_ord_court_adjmt__c.field-meta.xml
<CustomField>
    <fullName>ind_ord_court_adjmt__c</fullName>
    <description>ind_ord_court_adjmt</description>
    <externalDeveloperName>ind_ord_court_adjmt</externalDeveloperName>
    <label>Court Ordered Adjustment</label>
    <length>1</length>
    <type>Text</type>
</CustomField>