CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/ind_reimbsl_pmt__c.field-meta.xml
<CustomField>
    <fullName>ind_reimbsl_pmt__c</fullName>
    <description>ind_reimbsl_pmt</description>
    <externalDeveloperName>ind_reimbsl_pmt</externalDeveloperName>
    <label>Reimbursable payment</label>
    <length>1</length>
    <type>Text</type>
</CustomField>