CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_hist__x/fields/nbr_seq_wrkld__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_wrkld__c</fullName>
    <description>nbr_seq_wrkld</description>
    <externalDeveloperName>nbr_seq_wrkld</externalDeveloperName>
    <label>Number Sequence workload</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>